<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>slam2d_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chenmingjian@cvte.com">chenmingjian</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>protobuf-dev</build_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>log</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>slam2d_core</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mission_manager_msgs</build_depend>
  <build_depend>jsoncpp</build_depend>
  <build_depend>chassis_interfaces</build_depend>
  <build_depend>public_parameters</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>log</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>slam2d_core</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>mission_manager_msgs</exec_depend>
  <exec_depend>jsoncpp</exec_depend>
  <exec_depend>chassis_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
