<?xml version="1.0"?>
<package format="2">
  <name>costmap_base</name>
  <version>0.0.0</version>
  <description>The costmap_base package.</description>
  <maintainer email="chenmingjian@cvte.com">chenmingjian</maintainer>
  <maintainer email="wuhuabo@cvte.com">chenmingjian</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
