<?xml version="1.0"?>
<package format="2">
  <name>costmap_builder</name>
  <version>0.0.0</version>
  <description>The costmap_builder package.</description>
  <maintainer email="chenmingjian@cvte.com">chenmingjian</maintainer>
  <maintainer email="wuhuabo@cvte.com">chenmingjian</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>costmap_base</build_depend>
  <build_depend>costmap_layer</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>costmap_base</exec_depend>
  <exec_depend>costmap_layer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
