<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>data_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wuhuabo@cvte.com"></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>costmap_base</build_depend>
  <build_depend>costmap_mediator</build_depend>
  <build_depend>pose2d</build_depend>

  <exec_depend>costmap_base</exec_depend>
  <exec_depend>costmap_mediator</exec_depend>
  <exec_depend>pose2d</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
